--- a/composer.json
+++ b/composer.json
@@ -20,10 +20,10 @@
         ]
     },
     "require": {
-        "php": ">=7.1.3",
+        "php": ">=5.5.9",
+        "guzzlehttp/guzzle": "^6.3",
         "incenteev/composer-parameter-handler": "^2.0",
         "sensio/distribution-bundle": "^5.0.19",
-        "symfony/dom-crawler": "^4.0",
         "symfony/monolog-bundle": "^3.1.0",
         "symfony/symfony": "3.4.*",
         "twig/twig": "^1.0||^2.0"
