--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -7,7 +7,7 @@ services:
     # default configuration for services in *this* file
     _defaults:
         # automatically injects dependencies in your services
-        autowire: true
+        autowire: false
         # automatically registers your services as commands, event subscribers, etc.
         autoconfigure: true
         # this means you cannot fetch services directly from the container via $container->get()
@@ -28,6 +28,8 @@ services:
         resource: '../../src/AppBundle/Controller'
         public: true
         tags: ['controller.service_arguments']
+        arguments:
+          - '@AppBundle\Sections\SectionsViaHTTP'
 
     # add more services, or override services that need manual wiring
     # AppBundle\Service\ExampleService:
