--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         ]
     },
     "require": {
-        "php": ">=5.6.0",
+        "php": "^7.1",
         "guzzlehttp/guzzle": "^6.3",
         "incenteev/composer-parameter-handler": "^2.0",
         "sensio/distribution-bundle": "^5.0.19",
